# RayTracer

./: Notes.md  README.md  testsoutput.txt
app/: test.py
app/domain/: mn_color.py  mn_engine.py  mn_image.py  mn_light.py  mn_material.py  mn_math_utils.py  mn_objects.py  mn_point.py  mn_ray.py  mn_scene.py  mn_vector.py
cpp/: CMakeLists.txt  main.cpp
cpp/include/: mn_color.h  mn_engine.h  mn_image.h  mn_light.h  mn_materials.h  mn_objects.h  mn_point.h  mn_ray.h  mn_scene.h  mn_vector.h
cpp/src/: mn_color.cpp  mn_engine.cpp  mn_image.cpp  mn_light.cpp  mn_materials.cpp  mn_objects.cpp  mn_point.cpp  mn_ray.cpp  mn_scene.cpp  mn_vector.cpp
tests/: test.ppm  test2.ppm  test3.mn  test3.ppm  test4.mn  test5.mn  test_01.ppm
